--- a/District/കാസർഗോഡ്.md
+++ b/District/കാസർഗോഡ്.md
@@ -1,5 +1,38 @@
-# കാസർഗോഡ് ജില്ല 
- - 1984 മെയ് 24ന് രൂപം കൊണ്ടു 
- - നദികളുടെ നാട് എന്ന് അറിയപ്പെടുന്ന ജില്ല.
- - ദൈവങ്ങളുടെ നാട് എന്നറിയപ്പെടുന്ന ജില്ല.
-
+### കാസർഗോഡ്
+ - **1984 മെയ് 24** രൂപംകൊണ്ടു.
+ - ഏറ്റവും **അവസാനം രുപീകൃതമായ ജില്ല**.
+ - **തുളു ഭാഷ** സംസാരിക്കുന്ന ജില്ല.
+ - **ഏറ്റവും കൂടുതല്‍ പ്രാദേശിക ഭാഷകള്‍** ഉള്ള ജില്ല.
+ - **പുകയില** കൃഷിയും **അടക്ക** ഉല്‍പാദനവും ഏറ്റവും കൂടുതല്‍ ഉള്ള ജില്ല.
+ - കര്‍ണ്ണാടകത്തിലെ പ്രാദേശിക നൃത്തരൂപമായ **യക്ഷഗാനം** നിലനില്‍ക്കുന്ന ഒരേഒരു ജില്ല.
+ - വിലങ്ങനെ കുഴിക്കുന്ന കിണറുകളായ **സുരങ്ക കിണറുകള്‍** കാണപ്പെടുന്ന ജില്ല.
+ - **നദികളുടെ നാട്** എന്നും **ദൈവങ്ങളുടെ നാട്** എന്നും അറിയപ്പെടുന്ന ജില്ല.
+ - ഏറ്റവും **കൂടുതല്‍ നദികളുള്ള ജില്ല** (12 നദികള്‍).
+ - **`U` ആകൃതിയില്‍** കാസര്‍ഗോഡ് പട്ടണത്തെ ചുറ്റി ഒഴുകുന്ന പുഴയാണ് **ചന്ദ്രഗിരി പുഴ**.
+ - ചന്ദ്രഗിരി പുഴയുടെ **പോഷക നദി**കളാണ് (Tributary).
+ - **പയസ്വിനിപുഴ**യും **തേജസ്വിനി പുഴ**യും. അതുകൊണ്ട് ചന്ദ്രഗിരിപുഴ പയസ്വിനിപുഴ എന്നും തേജസ്വിനി പുഴ എന്നും അറിയപ്പെടുന്നു.
+ - **`പയസ്വിനിയുടെ തീരങ്ങളില്‍`** എന്ന ആത്മകഥ **കെ. മാധവന്‍** രചിച്ചതാണ്.
+ - കേരളത്തിന്‍റെ ഏറ്റവും **ചെറിയ പുഴ**യും ഏറ്റവും **വടക്കേ അറ്റത്തുള്ള പുഴ**യുമായ **മഞ്ചേശ്വരം പുഴ** കാസര്‍ഗോഡ് ആണ്. **16 കിലോ മീറ്റര്‍** ആണ് അതിന്‍റെ നീളം.
+ - കേരളത്തിന്‍റെ ഏറ്റവും **വടക്കേ അറ്റത്തുള്ള കായല്‍  ഉപ്പളാ കായല്‍** കാസര്‍ഗോഡ് ജില്ലയില്‍ സ്ഥിതി ചെയ്യുന്നു. 
+ - **കേന്ദ്ര തോട്ടവിള ഗവേഷണ കേന്ദ്രം (Central Plantation Crops Research Center)** കാസര്‍ഗോഡ് സ്ഥിതി ചെയ്യുന്നു.
+ - കേരളത്തിലെ **ഏറ്റവും വലിയ കോട്ട**യായ **ബേക്കല്‍ കോട്ട** കാസര്‍ഗോഡ് സ്ഥിതി ചെയ്യുന്നു. **ശിവപ്പ നായ്കര്‍** ആണ് ഇത് നിര്‍മ്മിച്ചത്. കാസര്‍ഗോഡ് സ്ഥിതി ചെയ്യുന്ന മറ്റൊരു കോട്ടയായ **ചന്ദ്രഗിരി കോട്ട**യും നിര്‍മ്മിച്ചത് അദ്ധേഹം തന്നെ.
+ - കേരളത്തിന്‍റെ ഊട്ടി എന്നറിയപ്പെടുന്ന **റാണിപുരം** കാസര്‍ഗോഡ് ജില്ലയിലാണ്.
+ - **പ്രകൃതി വാതകം (Natural Gas) ഇന്ധനം** ആയി ഉപയോഗിക്കുന്ന കേരളത്തിലെ ആദ്യത്തെ താപനിലയമായ **ചീമേനി താപനിലയം** കാസര്‍ഗോഡ് ജില്ലയില്‍ ആണ്.
+ - കേരളത്തിലെ രണ്ടാമത്തെ **തുറന്ന ജയില്‍**  കാസര്‍ഗോഡ് ജില്ലയിലെ **ചീമേനി**യിലാണ്.
+ - **കയ്യൂര്‍ സമരം 1941**-ല്‍ കാസര്‍ഗോഡ് ജില്ലയിലെ കയ്യൂരില്‍ വച്ചു നടന്നു.
+ - **തോല്‍വിറകു സമരം 1946**-ല്‍ കാസര്‍ഗോഡ് ജില്ലയിലെ **ചീമേനി**യില്‍ വച്ചു നടന്നു.
+ - **കേരളത്തിലെ ആദ്യത്തെ ചെന്തങ്ങ് നഗരം** ആണ് കാസര്‍ഗോഡ് ജില്ലയിലെ **നീലേശ്വരം**.
+ - **നീലേശ്വരം** മണ്ഡലത്തിലാണ് **ഇ.എം.എസ്.  ** ആദ്യമായി മത്സരിച്ചതും ആ തവണ തന്നെയാണ് മുഖ്യമന്ത്രിയായി തിരഞ്ഞെടുക്കപ്പെട്ടതും.
+ - **ഇന്ത്യയിലെ ആദ്യത്തെ സമ്പൂര്‍ണ്ണ രക്തദാന പഞ്ചായത്താണ്** കാസര്‍ഗോഡ് ജില്ലയിലെ **മടിക്കൈ**.
+ - **എന്‍ഡോസള്‍ഫാന്‍ ദുരന്തം** ഉണ്ടായത് കാസര്‍ഗോഡ് ജില്ലയിലെ **എന്‍മകജെ** എന്ന ഗ്രാമത്തില്‍ ആണ്.
+ - എന്‍ഡോസള്‍ഫാന്‍ ദുരന്തത്തെ ആസ്പദമാക്കി  **അംബികാ സുധന്‍ മങ്ങാട്** രചിച്ച കൃതിയാണ് **എന്‍മകജെ**.
+ - കേരളത്തിന്‍റെ വടക്കേ അറ്റത്തുള്ള 
+	 - **ലോകസഭാ മണ്ഡലം - കാസര്‍ഗോഡ്**
+	 - **നിയമസഭാ മണ്ഡലം - മഞ്ചേശ്വരം**
+	 - **താലൂക്ക് - മഞ്ചേശ്വരം**
+	 - **പുഴ - മഞ്ചേശ്വരം പുഴ**
+	 - **കായല്‍ - ഉപ്പളാ കായല്‍**
+ - **ഇന്ത്യയിലെ ആദ്യത്തെ ഫിലമെന്‍റ് ബള്‍ബ് രഹിത പഞ്ചായത്ത്** ആയി കാസര്‍ഗോഡ് ജില്ലയിലെ **പീലിക്കോട്** 2018-ല്‍ തിരഞ്ഞെടുക്കപ്പെട്ടു.
+ - **കേരളത്തില്‍ ആദ്യമായി നിര്‍മ്മല്‍ ഗ്രാമ പുരസ്കാരം ലഭിച്ചത്**  കാസര്‍ഗോഡ് ജില്ലയിലെ **പീലിക്കോട് ഗ്രാമപഞ്ചായത്തിനാണ്**. 
+ - കേരളത്തിലെ ആദ്യത്തെ **ജൈവ ജില്ല കാസര്‍ഗോഡ് ജില്ല**യാണ്.
+ - കേരളം രീപീകരിച്ചപ്പോള്‍ കാസര്‍ഗോഡ് **കര്‍ണ്ണാടകത്തിലെ സൗത്ത് കാനറ**യുടെ ഭാഗമായിരുന്നു.
