--- a/District/കാസർഗോഡ്.md
+++ b/District/കാസർഗോഡ്.md
@@ -4,7 +4,7 @@
  - **തുളു ഭാഷ** സംസാരിക്കുന്ന ജില്ല.
  - **ഏറ്റവും കൂടുതല്‍ പ്രാദേശിക ഭാഷകള്‍** ഉള്ള ജില്ല.
  - **പുകയില** കൃഷിയും **അടക്ക** ഉല്‍പാദനവും ഏറ്റവും കൂടുതല്‍ ഉള്ള ജില്ല.
- - കര്‍ണ്ണാടകത്തിലെ പ്രാദേശിക നൃത്തരൂപമായ **യക്ഷഗാനം** നിലനില്‍ക്കുന്ന ഒരേഒരു ജില്ല.
+ - കര്‍ണ്ണാടകത്തിലെ പ്രാദേശിക നൃത്തരൂപമായ **യക്ഷഗാനം** നിലനില്‍ക്കുന്ന ജില്ല.
  - വിലങ്ങനെ കുഴിക്കുന്ന കിണറുകളായ **സുരങ്ക കിണറുകള്‍** കാണപ്പെടുന്ന ജില്ല.
  - **നദികളുടെ നാട്** എന്നും **ദൈവങ്ങളുടെ നാട്** എന്നും അറിയപ്പെടുന്ന ജില്ല.
  - ഏറ്റവും **കൂടുതല്‍ നദികളുള്ള ജില്ല** (12 നദികള്‍).
