--- a/District/കാസർഗോഡ്.md
+++ b/District/കാസർഗോഡ്.md
@@ -10,7 +10,7 @@
  - ഏറ്റവും **കൂടുതല്‍ നദികളുള്ള ജില്ല** (12 നദികള്‍).
  - **`U` ആകൃതിയില്‍** കാസര്‍ഗോഡ് പട്ടണത്തെ ചുറ്റി ഒഴുകുന്ന പുഴയാണ് **ചന്ദ്രഗിരി പുഴ**.
  - ചന്ദ്രഗിരി പുഴയുടെ **പോഷക നദി**കളാണ് (Tributary).
- - **പയസ്വിനിപുഴ**യും **തേജസ്വിനി പുഴ**യും. അതുകൊണ്ട് ചന്ദ്രഗിരിപുഴ പയസ്വിനിപുഴ എന്നും തേജസ്വിനി പുഴ എന്നും അറിയപ്പെടുന്നു.
+ - **പയസ്വിനിപുഴ**യും **തേജസ്വിനി പുഴ**യും. അതുകൊണ്ട് ചന്ദ്രഗിരിപുഴ `പയസ്വിനിപുഴ` എന്നും `തേജസ്വിനി പുഴ` എന്നും അറിയപ്പെടുന്നു.
  - **`പയസ്വിനിയുടെ തീരങ്ങളില്‍`** എന്ന ആത്മകഥ **കെ. മാധവന്‍** രചിച്ചതാണ്.
  - കേരളത്തിന്‍റെ ഏറ്റവും **ചെറിയ പുഴ**യും ഏറ്റവും **വടക്കേ അറ്റത്തുള്ള പുഴ**യുമായ **മഞ്ചേശ്വരം പുഴ** കാസര്‍ഗോഡ് ആണ്. **16 കിലോ മീറ്റര്‍** ആണ് അതിന്‍റെ നീളം.
  - കേരളത്തിന്‍റെ ഏറ്റവും **വടക്കേ അറ്റത്തുള്ള കായല്‍  ഉപ്പളാ കായല്‍** കാസര്‍ഗോഡ് ജില്ലയില്‍ സ്ഥിതി ചെയ്യുന്നു. 
